# PydanticAI-llm-caching

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Publishing.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  type_check_test.py
.github/workflows/: ci.yml  publish-to-pypi.yml
src/llm_caching/: __init__.py  agent.py  config.py  costs.py  exceptions.py  types.py
src/pyai_caching/: __init__.py  agent.py  agent.pyi  config.py  config.pyi  costs.py  costs.pyi  exceptions.py  exceptions.pyi  types.py  types.pyi
tests/: conftest.py  test_agent.py  test_benchmarks.py  test_integration.py  test_live_agent.py  test_version.py
