[project]
name = "pyai-caching"
version = "0.4"
description = "Redis-based caching for Pydantic AI LLM agents with cost tracking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Andrew de Jonge", email = "talkingtoaj@hotmail.com" }]
keywords = ["llm", "caching", "redis", "ai", "cost-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis",
    "pydantic",
    "typing-extensions",
    "pydantic-ai",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "python-dotenv",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyai_caching = ["py.typed", "*.pyi"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
